# sybil-process-manager

./: .gitignore  CMakeLists.txt  README.MD
src/: CMakeLists.txt  main.cpp
src/cli/: CMakeLists.txt  command_parser.cpp  command_parser.h  commander.h
src/core/: CMakeLists.txt  daemon.cpp  daemon.h  exceptions.cpp  exceptions.h  locker.cpp  locker.h  logger.cpp  logger.h  named_pipe.cpp  named_pipe.h  overseer.cpp  overseer.h  process.cpp  process.h  process_logger.cpp  process_logger.h  process_pipe.cpp  process_pipe.h  sybling.cpp  sybling.h  test_class.cpp  test_class.h
src/daemon/: CMakeLists.txt
tests/: CMakeLists.txt  daemon_start_test.cpp  file_test.cpp  main.cpp  multistart_test.cpp  reader_test.cpp  test_locker.cpp  test_logger.cpp  test_named_pipe.cpp  test_process.cpp  test_sybling.cpp
