project(sybil-process-manager)

add_library(core
        process_pipe.h
        process_pipe.cpp
        process.h
        process.cpp
        process_pipe
        sybling.h
        sybling.cpp
        logger.h
        logger.cpp
        locker.h
        locker.cpp
        daemon.h
        daemon.cpp
        exceptions.h
        exceptions.cpp
        named_pipe.h
        named_pipe.cpp)